# PAK_Road_Side_Agent

./: .dockerignore  .env.example  .gitignore  README.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: android-distribute.yml
apps/admin/: .env.example  Dockerfile  package-lock.json  package.json  tailwind.config.js  vercel.json  vite.config.ts
apps/mobile/: .gitignore  README.md  analysis_options.yaml  pubspec.yaml  setup-android.ps1
apps/web/: README.md  index.html  package.json  tailwind.config.cjs  vercel.json  vite.config.ts
apps/web/src/: App.tsx  (+1 more)
backend/: .dockerignore  Dockerfile  Dockerfile.railway  alembic.ini  celery_worker.py  create_admin.py  pytest-debug.txt  pytest-out.txt  railway.toml  requirements.txt  seed.py
backend/alembic/: env.py
backend/app/: config.py  database.py  main.py  metrics.py
backend/tests/: conftest.py  test_admin_agent.py  test_admin_api.py  test_agents.py  test_auth.py  test_celery_task.py  test_communication.py  test_dispatch.py  test_escalation.py  test_file_service.py  test_guardrail.py  test_incidents_api.py  test_jwt.py  test_metrics.py  test_metrics_endpoint.py  test_monitoring_task.py  test_orchestrator.py  test_otp_dev.py  test_phone.py  test_providers_api.py  test_security.py  test_security_review.py  test_triage.py  test_webhooks.py
docs/: APK_DISTRIBUTION_SETUP.md
frontend/admin/: index.html  package.json  tailwind.config.js
frontend/customer/: .gitignore  Dockerfile  index.html  package-lock.json  tailwind.config.js
infrastructure/: docker-compose.prod.yml  docker-compose.yml
(+206 files in other folders)
